--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.31"
+    "@types/cheerio": "^0.22.31",
+    "nodemon": "^2.0.19"
   }
 }
