--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cherio": "^1.0.0-rc.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   },
   "devDependencies": {
